test/domains/sungeun/assoc/expand.good
expand.chpl:4: In function 'my_expand':
expand.chpl:5: error: expand not supported on associative domains
